# Performance-analyzer

./: .dockerignore  .gitignore  Dockerfile  LICENSE  Makefile  README.md  requirements.txt  setup.py
analyzers/c/: CMakeLists.txt
analyzers/c/include/: analyzer.h  ast_visitor.h  complexity_calculator.h  json_handler.h  pattern_detector.h  types.h
analyzers/c/src/: analyzer.c  ast_visitor.c  complexity_calculator.c  json_handler.c  main.c  pattern_detector.c
analyzers/cpp/: CMakeLists.txt
analyzers/cpp/include/: analyzer.hpp  complexity.hpp  patterns.hpp  utils.hpp
analyzers/cpp/src/: analyzer.cpp  analyzer.hpp  ast_visitor.cpp  ast_visitor.hpp  complexity.cpp  complexity_calculator.cpp  complexity_calculator.hpp  json_handler.cpp  json_handler.hpp  main.cpp  pattern_detector.cpp  pattern_detector.hpp  patterns.cpp  utils.cpp
analyzers/java/: pom.xml
analyzers/java/src/main/java/com/bigo/: Main.java
analyzers/java/src/main/java/com/bigo/analyzer/: ASTAnalyzer.java  ComplexityCalculator.java  JavaAnalyzer.java  PatternDetector.java
analyzers/java/src/main/java/com/bigo/models/: ComplexityClass.java  ComplexityResult.java
analyzers/javascript/: package-lock.json  package.json
analyzers/javascript/src/: analyzer.js  astAnalyzer.js  complexityCalculator.js  index.js  patternDetector.js
analyzers/python/: analyzer.py
config/: analyzer_config.json
knowledge_base/algorithms/: searching.json  sorting.json
knowledge_base/complexity_rules/: space_complexity.json  time_complexity.json
knowledge_base/patterns/: data_structures.json  loops.json  recursion.json
src/: api.py  cli.py  config.py  main.py
src/models/: __init__.py  analysis.py  complexity.py
src/services/: __init__.py  analyzer_bridge.py  orchestrator.py
src/utils/: __init__.py  config_validator.py  file_detector.py  formatters.py  logger.py  validators.py
